Fix blurry skin library images in chromium

--- a/_sass/_surge.scss
+++ b/_sass/_surge.scss
@@ -1692,9 +1692,6 @@ select {
 .skin-wrap h4 {
     margin-bottom: 1em;
 }
-.skin-wrap img {
-    border: 1em solid #000000;
-}
 .skin-text {
     background-color:#ffffff;
     margin-right:auto;
